# traction

./: .gitignore  dev.md  install.md  makefile  pyproject.toml  readme.md  traction.py  traction.py~  use.md
html/: index.html  search.js  tr.html
test/: test.ct  test_traction.py
tr/: __init__.py  __main__.py  init.ct  main.ct
traction/: __init__.py  __main__.py
