[build-system]
requires = ["setuptools"] # list of packages needed to build your package
build-backend = "setuptools.build_meta" # name of the python object that frontends use to perform the build

[project]
name = "traction"
version = "0.0.9"
authors = [
  { name="numlims", email="numlims@med.uni-greifswald.de"}
]
description = "samples and patients in centraxx"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
  #"tbl @ git+https://github.com/numlims/tbl"
  "tbl @ https://github.com/numlims/tbl/archive/refs/tags/v0.0.2.zip",
]
classifiers = [
  "Programming Language :: Python :: 3"
]

[project.scripts]
traction = "tr:__main__" # call command tr?

[tool.setuptools]
packages = ["tr"] # keep the package name short so that string constants can be accessed easily


