[build-system]
requires = ["setuptools"] # list of packages needed to build your package
build-backend = "setuptools.build_meta" # name of the python object that frontends use to perform the build

[project]
name = "traction"
version = "0.1.4"
authors = [
  { name="numlims", email="numlims@med.uni-greifswald.de"}
]
description = "samples and patients in centraxx"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
  #"dbcq @ https://github.com/numlims/dbcq/archive/refs/tags/v0.0.6.zip", # avoid version numbers in this and sub packages, so that if dbcq is used in another package the newest dbcq is installed both times.
  "cnf @ git+https://github.com/numlims/cnf.git",
  "dbcq @ git+https://github.com/numlims/dbcq.git",
  "dip @ git+https://github.com/numlims/dip.git",
  "jsonpickle",
  #"psycopg2",
  "simplejson",
  "tbl @ git+https://github.com/numlims/tbl.git",
  "tram @ git+https://github.com/numlims/tram.git"
]
classifiers = [
  "Programming Language :: Python :: 3"
]

[project.scripts]
traction = "tr:__main__" # call command tr?

[tool.setuptools]
packages = ["tr"] # keep the package name short so that string constants can be accessed easily


